test/haskell2010/conformance/negative/derived-enum-field-constructor.hs
module Main where

data Box = Box Int deriving (Enum)

main = 0
